UI changes. Pre-release icons. :)

--- a/TwilightBoxart.UX/MainForm.resx
+++ b/TwilightBoxart.UX/MainForm.resx
@@ -120,4 +120,100 @@
   <metadata name="folderBrowseDlg.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAIAICAAAAEAIACoEAAAJgAAABAQAAABACAAaAQAAM4QAAAoAAAAIAAAAEAAAAABACAAAAAAAIAQ
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAAAAAAAAAAAAAAAAAA/7y8vP+8vLz/vLy8/7y8vP+8vLz/vLy8/7y8
+        vP+8vLz/vLy8/7y8vP+8vLz/vLy8/7y8vP+8vLz/vLy8/7y8vP+8vLz/vLy8/7y8vP+8vLz/vLy8/7y8
+        vP+8vLz/vLy8/7y8vP+8vLz/vLy8/5mZmf8AAAD/AAAAAAAAAAAAAAD//f3+/+7w8P/u8PD/7/Dw/+/w
+        8f/v8PH//f3+//39/v/9/f7//f3+//39/v/9/f7//f3+//39/v/9/f7//f3+//39/v/9/f7//f3+//39
+        /v/9/f7//f3+//T09f/09PX/9PT1//T19f/19fX/vLy8/wAAAP8AAAAAAAAAAAAAAP/9/f7/7vDw/+7w
+        8P/v8PH/7/Dx//39/v/S09T/0NLS/9DS0v/Q0tL/0NLS/9DS0//R0tP/0dLT/9HS0//R09P/0dPT/9HT
+        0//R09P/0dPT/9LT0//S09T//f3+/+bo6f/m6On/5ujp//T19f+8vLz/AAAA/wAAAAAAAAAAAAAA//39
+        /v/u8PD/7vDw/+/w8f/v8PH//f3+/9DS0v8uLy7/Li8u/y4vLv8uLy7/Li8u/y4vLv8uLy7/Li8u/y4v
+        Lv8uLy7/Li8u/y4vLv8uLy7/Li8u/9LT1P/9/f7/9PT1//T09f/09fX/9PX1/7y8vP8AAAD/AAAAAAAA
+        AAAAAAD//f3+/+7w8P/u8PD/7/Dw/+/w8f/9/f7/0NLS/y4vLv9UVFL/VldV/1hYV/9aW1r/XV1c/15f
+        Xv9gYWD/YmJh/2JjYv9iY2L/Y2Ni/11eXf8uLy7/0tPU//39/v/h4uT/7Ozs/+Hi5P/09fX/vLy8/wAA
+        AP8AAAAAAAAAAAAAAP/9/f7/7vDw//39/v/9/f7/7/Dx//39/v/Q0tL/Li8u/1BRT/9TVFL/VVVU/1hY
+        V/9ZWln/XV1c/19fXv9gYWD/YmNi/2RkY/9kZWT/ZGRj/y4vLv/S09T//f3+//39/v/f4eL//f3+//39
+        /v+8vLz/AAAA/wAAAAAAAAAAAAAA//39/v/9/f7/mZmZ/5mZmf/9/f7//f3+/9DS0v8uLy7/Tk5M/09Q
+        T/9QUVD/U1RT/1VWVf9YWVj/W1ta/15fXf9hYWD/YmNi/2NkY/9kZWP/Li8u/9LT1P/f4eL/3+Hi/9/h
+        4v/f4eL/3+Hi/7y8vP8AAAD/AAAAAAAAAAAAAAD//f3+/5mZmf/9/f7//f3+/5mZmf/f4eL/0NLS/y4v
+        Lv9MTEv/TU5N/05PTf9PT07/UVFQ/1NUUv9WV1X/Wlta/1xdXP9fYF//YWFg/2RkYf8uLy7/0tPU/9/h
+        4v+9v7///f3+/72/v//f4eL/vLy8/wAAAP8AAAAAAAAAAAAAAP/v8PH//f3+/+/w8f/9/f7//f3+/9/h
+        4v/Q0tL/Li8u/0xNS/9OT03/T09O/05PTv9OT07/T1BP/1FSUf9UVFP/V1hW/1tcW/9eXlz/Y2Jf/y4v
+        Lv/S09T/mZmZ//X19f+ZmZn/9fX1/5mZmf+8vLz/AAAA/wAAAAAAAAAAAAAA/+/w8f/9/f7/7/Dx/+/w
+        8f/9/f7/3+Hi/9DS0v8uLy7/TExL/05PTv9PUE//T1BP/1BQT/9OT07/T09O/09QT/9RUlH/VVZV/1pa
+        WP9fX1z/Li8u/9LT1P+9v7//mZmZ//X19f+ZmZn/3+Hi/7y8vP8AAAD/AAAAAAAAAAAAAAD//f3+/72/
+        v//9/f7//f3+/72/v//9/f7/0NLS/y4vLv9NTkz/T1BP/1BRT/9RUVD/UFFQ/09QTv9PT07/T09O/05P
+        Tv9RUVD/VlZV/1taWP8uLy7/0tPU//39/v/Ly8v/y8vL/8vLy//19fX/vLy8/wAAAP8AAAAAAAAAAAAA
+        AP/9/f7/7vDw/9/h4v/f4eL/7/Dx//39/v/Q0tL/Li8u/05PTf9QUU//UVFQ/1FRUP9QUVD/UFFQ/1BR
+        T/9PUE//UFBP/09QT/9SU1L/V1hW/y4vLv/S09T//f3+//T09f/09fX/9PX1//X19f+8vLz/AAAA/wAA
+        AAAAAAAAAAAA//39/v/u8PD/7vDw/+/w8P/v8PH//f3+/9DS0v8uLy7/Li8u/y4vLv8uLy7/Li8u/y4v
+        Lv8uLy7/Li8u/y4vLv8uLy7/Li8u/y4vLv8uLy7/Li8u/9LT1P/9/f7/9PT1//T19f/09fX/9fX1/7y8
+        vP8AAAD/AAAAAAAAAAAAAAD/39/g/9TW1v/U1tb/1dbW/9XW1v/V1tb/39/g/7/Bwf+/wcH/v8HB/7/B
+        wf+/wcH/wMHB/8DBwf/AwcH/wMHB/8DBwf/AwcH/wMHB/8DBwf/BwcH/39/g/9nZ2f/Z2dn/2dnZ/9nZ
+        2f/Z2dn/sbGx/wAAAP8AAAAAAAAAAAAAAP/f3+D/f4OD/3+Dg/9/g4P/VFVU/1RVVP9UVVT/VFVU/1RV
+        VP9UVVT/VFVU/1RVVP9UVVT/VFVU/1RVVP9UVVT/VFVU/1RVVP9UVVT/VFVU/1RVVP9UVVT/VFVU/1RV
+        VP9/g4P/Y6GJ/3+Dg//Y2dn/AAAA/wAAAAAAAAAAAAAAAAAAAP+9v7//8/T0//P09P9UVVT/3uHh/97h
+        4f/e4OH/3uDh/9/h4f/f4uL/3+Li/+Xn6P/l5+j/f4OD/+Xn6P/i5OX/vb+//+Lk5P/h5OT/4eTk/+Hk
+        5P/h4+T/VFVU/7Hs3f8o3Jb/sezd/wAAAP8AAAAAAAAAAAAAAAAAAAD/VFVU/1RVVP9UVVT/VFVU/72/
+        v//9/f7//f3+//39/v/9/f7//f3+//39/v/9/f7//f3+//39/v/9/f7//f3+//39/v/9/f7//f3+//39
+        /v/9/f7//f3+//39/v+9v7//VFVU/0aDZv9UVVT/VFVU/wAAAP8AAAAAAAAAAAAAAP/l5uf/+fn6/+7w
+        8P/v8PD/7/Dx//39/v/S09T/0NLS/9DS0v/Q0tL/0NLS/9DS0//R0tP/0dLT/9HS0//R09P/0dPT/9HT
+        0//R09P/0dPT/9LT0//S09T//f3+//T09f/09PX/9PX1///////s7O3/AAAA/wAAAAAAAAAAAAAA/+Xm
+        5//5+fr/7vDw/+/w8P/v8PH//f3+/9DS0v8uLy7/Li8u/y4vLv8uLy7/Li8u/y4vLv8uLy7/Li8u/y4v
+        Lv8uLy7/Li8u/y4vLv8uLy7/Li8u/9LT1P/9/f7/9PT1//T09f/09fX//////+zs7f8AAAD/AAAAAAAA
+        AAAAAAD/5ebn//n5+v/u8PD/7/Dw/+/w8f/9/f7/0NLS/y4vLv9aW1r/Wlta/1dYV/9WV1b/V1dW/1ZX
+        Vf9WV1b/VldW/1ZXVv9WVlb/VlZV/1VVVf8uLy7/0tPU//39/v/09PX/9PT1//T19f//////7Ozt/wAA
+        AP8AAAAAAAAAAAAAAP/l5uf/+fn6//r7+//6+/v/+vv7//39/v/Q0tL/Li8u/2BhX/9gYV//W1ta/1lZ
+        WP9YWFj/WFlY/1hYWP9YWFj/WFhY/1hYWP9YWFj/V1dX/y4vLv/S09T//f3+///////09PX/////////
+        ///s7O3/AAAA/wAAAAAAAAAAAAAA/+Xm5//5+fr/vb+//+/w8P+9v7///f3+/9DS0v8uLy7/Zmdm/2Zn
+        Zv9hYWH/Xl5d/1tbW/9aWlr/Wlpa/1lZWf9ZWln/WVlZ/1lZWf9YWFj/Li8u/9LT1P/9/f7/vb+///T0
+        9f+9v7///////+zs7f8AAAD/AAAAAAAAAAAAAAD/5ebn//n5+v/6+/v/7/Dw//r7+//9/f7/0NLS/y4v
+        Lv9tbmz/bW5s/2trav9mZmb/YmJi/19fX/9dXl3/XFxc/1tbW/9bW1v/W1tb/1paWv8uLy7/0tPU//39
+        /v//////9PT1////////////7Ozt/wAAAP8AAAAAAAAAAAAAAP/l5uf/+fn6/72/v//v8PD/vb+///39
+        /v/Q0tL/Li8u/3Jycv9ycnL/cHFw/25ubf9qa2r/Z2dn/2NjY/9fX1//Xl5e/11dXf9dXV3/W1tb/y4v
+        Lv/S09T//f3+/72/v//09PX/vb+////////s7O3/AAAA/wAAAAAAAAAAAAAA/+Xm5//5+fr/7vDw/+/w
+        8P/v8PH//f3+/9DS0v8uLy7/dnZ2/3Z2dv91dXX/dHR0/3Fxcf9ubm7/ampq/2dnZ/9kZGT/YWFh/19f
+        X/9eXl7/Li8u/9LT1P/9/f7/9PT1//T09f/09fX//////+zs7f8AAAD/AAAAAAAAAAAAAAD/5ebn//n5
+        +v/u8PD/7/Dw/+/w8f/9/f7/0NLS/y4vLv95eXn/eXl5/3l4eP94eHj/dXV1/3Nzc/9wcHD/bW1t/2pq
+        av9nZ2f/ZWVl/2JiYv8uLy7/0tPU//39/v/09PX/9PT1//T19f//////7Ozt/wAAAP8AAAAAAAAAAAAA
+        AP/l5uf/+fn6/+7w8P/v8PD/7/Dx//39/v/Q0tL/Li8u/3p6ev96enr/enp6/3l5ef94eHj/d3d3/3R0
+        dP9ycnL/b29v/2tra/9oaGj/ZWVl/y4vLv/S09T//f3+//T09f/09PX/9PX1///////s7O3/AAAA/wAA
+        AAAAAAAAAAAA/+Xm5//5+fr/7vDw/+/w8P/v8PH//f3+/9DS0v8uLy7/Li8u/y4vLv8uLy7/Li8u/y4v
+        Lv8uLy7/Li8u/y4vLv8uLy7/Li8u/y4vLv8uLy7/Li8u/9LT1P/9/f7/9PT1//T09f/09fX//////+zs
+        7f8AAAD/AAAAAAAAAAAAAAD/5ebn/+7w8P/5+fr/+fn6//n6+v/5+vr/+fr6//n6+v/5+vr/+fr6//n6
+        +v/5+vr/+fr6//n6+v/5+vr/+fr6//n6+v/5+vr/+fr6//n6+v/5+vr/+fr6//n6+v/7+/v/+/v7//v7
+        /P//////7Ozt/wAAAP8AAAAAAAAAAAAAAP/Ly8v/4OLi/+Di4v/g4uL/4eLi/+Di4v/g4uL/5efn/+Xm
+        5v/l5+f/5ejo/+Xo6P/m6Oj/5ejo/+Xn5//l5uf/5ebm/+Tl5f/l5+f/5efn/+Xo6P/i4+P/4eLi/+Hi
+        4v/h4uL/4eLi/+Di4v/Ly8v/AAAA/wAAAAAAAAAAAAAAAAAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAAAAAAAAMAAAAOAAAABgAAAAYAAAAGAAAABgAAAAYAA
+        AAGAAAABgAAAAYAAAAGAAAABgAAAAYAAAAGAAAABgAAAAYAAAAHAAAADgAAAAYAAAAGAAAABgAAAAYAA
+        AAGAAAABgAAAAYAAAAGAAAABgAAAAYAAAAGAAAABgAAAAYAAAAHAAAADKAAAABAAAAAgAAAAAQAgAAAA
+        AABABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAAAAAAAAAAAAD/v8TE/7/ExP+/xMT/v8TE/7/ExP+/xMT/v8TE/7/E
+        xP+/xMT/v8TE/7/ExP+/xMT/v8TE/wAAAP8AAAAAAAAA/////////////////y4vLv8uLy7/Li8u/y4v
+        Lv8uLy7/Li8u/y4vLv/29/f/9vf3/7/ExP8AAAD/AAAAAAAAAP/4+fn/lZiZ/+Ll5f8uLy7/UVJR/1ZX
+        Vv9bXFv/YGFf/2NkY/8uLy7/9vf3/5WYmf/4+fn/AAAA/wAAAAAAAAD/lZiZ/93g4P+VmJn/Li8u/05O
+        Tf9PT07/UlNR/1hZV/9eXl3/Li8u/5WYmf/09fX/lZiZ/wAAAP8AAAAAAAAA///////V2Nn/9vf3/y4v
+        Lv9PUE7/UFBP/05PTv9PUE//VVVU/y4vLv/29/f/z9PT//j5+f8AAAD/AAAAAAAAAP//////////////
+        //8uLy7/Li8u/y4vLv8uLy7/Li8u/y4vLv8uLy7/9vf3//b39//29/f/AAAA/wAAAAAAAAD/u8DB/5WY
+        mf9vcXH/b3Fx/29xcf9vcXH/b3Fx/29xcf9vcXH/b3Fx/29xcf9vcXH/u8DB/wAAAP8AAAAAAAAA/wAA
+        AP+/xMT/3uHh/97h4f/e4eH/3uHh/6WrrP/e4eH/3uHh/97h4f/e4eH/gePC/wAAAP8AAAD/AAAAAAAA
+        AP/9/f3/+/v7//v7+/8uLy7/Li8u/y4vLv8uLy7/Li8u/y4vLv8uLy7/4uTk/97h4f/d39//AAAA/wAA
+        AAAAAAD//////+3u7v//////Li8u/2BhYP9aWlr/WVlZ/1hYWP9YWFj/Li8u/+nr6//d39//3d/f/wAA
+        AP8AAAAAAAAA/////////////////y4vLv9ub27/aGhn/2FhYf9dXV3/XFxc/y4vLv/p6+v/6Orq/93f
+        3/8AAAD/AAAAAAAAAP//////7e7u//////8uLy7/d3d3/3R0dP9ubm7/aGho/2NjY/8uLy7/6evr/93f
+        3//d39//AAAA/wAAAAAAAAD//P39//z9/f//////Li8u/y4vLv8uLy7/Li8u/y4vLv8uLy7/Li8u/+nr
+        6//k5ub/3d/f/wAAAP8AAAAAAAAA///////4+fn///////////////////////b29v/29vb/7e7u/+3u
+        7v/t7u7/6Orq/9zf3/8AAAD/AAAAAAAAAAAAAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAAAAAAAACAAwAAAAEAAAABAAAAAQAAAAEAAAABAAAAAQAAAAEAAAAB
+        AAAAAQAAAAEAAAABAAAAAQAAAAEAAAABAACAAwAA
+</value>
+  </data>
 </root>
